[gd_scene load_steps=4 format=3 uid="uid://de5s82wmpaqjr"]

[ext_resource type="Theme" uid="uid://bb6vwl0h1flws" path="res://assets/FlatUI4/kenneyUI-blue.tres" id="1_js6yo"]
[ext_resource type="Script" path="res://scenes/ui/level_selection_window.gd" id="1_khjcp"]
[ext_resource type="FontFile" uid="uid://c5rf6prrbtmlf" path="res://assets/LazyFox Pixel Font 2/LazyFox Pixel Font 2.ttf" id="2_71rei"]

[node name="LevelSelectionWindow" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_khjcp")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 386.0
offset_bottom = 279.0
theme = ExtResource("1_js6yo")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 9.0
offset_right = 376.0
offset_bottom = 272.0

[node name="PanelContainer" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_71rei")
theme_override_font_sizes/font_size = 20
text = "Levels"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItemList" type="ItemList" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 166)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_71rei")
theme_override_font_sizes/font_size = 20

[node name="PanelContainer2" type="HSplitContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="EnterButton" type="Button" parent="Panel/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_71rei")
theme_override_font_sizes/font_size = 20
text = "Enter"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_71rei")
theme_override_font_sizes/font_size = 20
text = "Cancel"

[connection signal="pressed" from="Panel/VBoxContainer/PanelContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
